--- a/src/content/post/astro-nomical-switch-hashnode-to-astro.mdx
+++ b/src/content/post/astro-nomical-switch-hashnode-to-astro.mdx
@@ -140,8 +140,8 @@ Also, another cool thing in this starter is that it allows me to work on draft p
 
 ```md
 ---
-
-## draft: true
+draft: true
+---
 ```
 
 You can view the source code for this blog on [GitHub](https://github.com/shrirambalaji/blog.shrirambalaji.com). Astro and the ecosystem around it enabled me to make this change in a couple of days. Looking forward to write more here. Let's see ✌️
