update width, fix draft blog date

--- a/src/content/post/designing-ai-for-tomorrow.mdx
+++ b/src/content/post/designing-ai-for-tomorrow.mdx
@@ -1,7 +1,7 @@
 ---
 title: Designing AI for tomorrow - Beyond Chat
-description: 
-publishDate: 
+description: ""
+publishDate: "Sep 27 2023"
 tags: ["ai", "LLM"]
 draft: true
 ---
