feat(tweets): move to astro-tweet
chore: update package deps

--- a/src/content/post/astro-nomical-switch-hashnode-to-astro.mdx
+++ b/src/content/post/astro-nomical-switch-hashnode-to-astro.mdx
@@ -16,8 +16,8 @@ import obsidianGitiOSScreenshot from "./attachments/obsidian-git-ios-screenshot.
 import hashnodePageSpeedResult from "./attachments/hashnode-pagespeed-result.png";
 import hashnodePageSpeedResultOpportunities from "./attachments/hashnode-pagespeed-result-opportunities.png";
 import blogPageSpeedResult from "./attachments/blog-pagespeed-result.png";
+import Tweet from "astro-tweet";
 
-import Tweet from "../../components/Tweet.astro";
 
 I've been using [hashnode.dev](https://hashnode.dev) for the last couple of years as my primary blogging platform. It has served me well, but I think it's time for a change.
 
@@ -30,7 +30,7 @@ Don't get me wrong, hashnode is great to get started and helps build a habit of 
 Hashnode had custom CSS for a couple of years, and I've raved about in the past.
 
 <div class="tweet-embed">
-	<Tweet id="https://twitter.com/shrirambalaji/status/1341662028843241474" />
+	<Tweet id="1341662028843241474" />
 </div>
 
 But over time, as it happens with custom stylesheets - _things broke_. The theming was inconsistent with my site at [shrirambalaji.com](https://shrirambalaji.com) and it was hard to maintain. In hindsight, I should have realized that adding custom stylesheets without having any form of guarantee of it not breaking, would eventually turn out to be an issue.
