--- a/src/content/post/building-blocks-of-3d/index.mdx
+++ b/src/content/post/building-blocks-of-3d/index.mdx
@@ -8,7 +8,7 @@ coverImage:
   alt: "Building Blocks of 3D"
 ---
 
-import { Tweet } from "astro-embed";
+import Tweet from "astro-tweet"
 
 Hello! I've been trying out [React Three Fiber](https://github.com/pmndrs/react-three-fiber) and [three.js](https://threejs.org/) and it's a whole new world to me. I also started learning to use [blender](https://blender.org), so I wanted share some initial learnings about 3D.
 
@@ -86,6 +86,8 @@ I'll keep this blog updated as I dive more into 3D. That's all for now, and Happ
 
 Also here's my first blender artwork 🎉
 
-<Tweet id="https://twitter.com/shrirambalaji/status/1475766509347557379" />
+<div class="tweet-embed">
+  <Tweet id="1475766509347557379" />
+</div>
 
 See you in the next one 👋
