feat: add ThemedImage Astro component
* init blog about ThemedImage

--- a/src/content/post/resolving-rust-symbols.mdx
+++ b/src/content/post/resolving-rust-symbols.mdx
@@ -37,7 +37,10 @@ What are Symbols?
 
 Symbols are how we go from variable names -> memory addresses in machine instructions. 
 
-<ThemedImage alt="Compiler Build Symbols Resolved by Linker" src={"/src/content/post/attachments/compiler-build-symbols-resolve-linker.svg"} darkSrc={"/src/content/post/attachments/compiler-build-symbols-resolve-linker-dark.svg"}> </ThemedImage>
+<ThemedImage alt="Compiler Build Symbols Resolved by Linker" 
+  src={"/src/content/post/attachments/compiler-build-symbols-resolve-linker.svg"} 
+  darkSrc={"/src/content/post/attachments/compiler-build-symbols-resolve-linker-dark.svg"}> 
+</ThemedImage>
 
 In compiled language like C, C++, or Rust, a build consists of two phases. In the first phase, a compiler compiles source files into object files (`.o` files). In the second phase, a linker takes all object files and combines them into a single executable or shared library file.
 
