--- a/src/content/post/resolving-rust-symbols/index.mdx
+++ b/src/content/post/resolving-rust-symbols/index.mdx
@@ -1,12 +1,11 @@
 ---
 title: Resolving Rust Symbols
-description: This article is about my understanding of Rust linking, detailing learnings along the way about Linking in Unix systems, how Rust linkage differs from C, trying different linkers like mold, lld and understanding what they offer.
-publishDate: June 30, 2024
+description: This article is about my understanding of Rust linking, detailing learnings along the way about Linking in Unix systems, how Rust linkage differs from C, symbol resolution, what's inside an ELF file, understanding the Rust compilation pipeline, and linking static Rust libraries manually.
+publishDate: Jul 1, 2024
 tags:
   - rust
   - linking
   - systems
-draft: true
 coverImage:
   src: "./cover.png"
   alt: "Resolving Rust Symbols"
