remove colon in references

--- a/src/content/post/resolving-rust-symbols/index.mdx
+++ b/src/content/post/resolving-rust-symbols/index.mdx
@@ -466,7 +466,7 @@ I might have missed some details, or made some mistakes, so please feel free to 
 
 Until next time 👋
 
-## References:
+## References
 
 - [Code Snippets on Github](https://github.com/shrirambalaji/resolving-rust-symbols-learning-linkers)
 - [CS 361 Systems Programming by Chris Kanich](https://www.cs.uic.edu/~ckanich/cs361/s21/)
