remove youtube embeds

--- a/src/content/post/resolving-rust-symbols/index.mdx
+++ b/src/content/post/resolving-rust-symbols/index.mdx
@@ -462,7 +462,9 @@ The output `Global: 20` means that the `foo` and `bar` functions were called suc
 
 Writing this article was an immense learning for me, to try and understand linking in Rust, starting from the basics of linking in Unix-like systems, symbol resolution, what's inside an ELF format `.o` file, understanding the Rust compilation pipeline, and finally linking static Rust libraries manually.
 
-I might have missed some details, or made some mistakes, so please feel free to correct me. I'm always open to learning new things. Thanks for reading! All the code samples, articles and videos I used for research are linked below in the #[References](#references) section. 
+Thanks for reading! Please feel free to reach out on twitter: [@shrirambalaji](https://twitter.com/shrirambalaji) if you would like to provide feedback: I'm always open to learning new things. 
+
+All the code samples, articles and videos I used for research are linked below in the [References](#references) section. 
 
 Until next time 👋
 
