update all reference links

--- a/src/content/post/resolving-rust-symbols/index.mdx
+++ b/src/content/post/resolving-rust-symbols/index.mdx
@@ -462,7 +462,7 @@ The output `Global: 20` means that the `foo` and `bar` functions were called suc
 
 Writing this article was an immense learning for me, to try and understand linking in Rust, starting from the basics of linking in Unix-like systems, symbol resolution, what's inside an ELF format `.o` file, understanding the Rust compilation pipeline, and finally linking static Rust libraries manually.
 
-Thanks for reading! Please feel free to reach out on twitter: [@shrirambalaji](https://twitter.com/shrirambalaji) if you would like to provide feedback: I'm always open to learning new things. 
+Thanks for reading! Please feel free to reach out on twitter: [@shrirambalaji](https://twitter.com/shrirambalaji) if you would like to provide feedback. I'm always open to learning new things. 
 
 All the code samples, articles and videos I used for research are linked below in the [References](#references) section. 
 
@@ -473,10 +473,10 @@ Until next time 👋
 - [Code Snippets on Github](https://github.com/shrirambalaji/resolving-rust-symbols-learning-linkers)
 - [CS 361 Systems Programming by Chris Kanich](https://www.cs.uic.edu/~ckanich/cs361/s21/)
 - [High Level Compiler Architecture - Rustc Guide](https://rustc-dev-guide.rust-lang.org/overview.html)
-- [The Rust Borrow Checker - A Deep Dive - Nell Shamrell-Harrington, Microsoft](https://www.youtube.com/watch?v=HG1fppexRMA)
+- [The Rust Borrow Checker - A Deep Dive by Nell Shamrell-Harrington](https://www.youtube.com/watch?v=HG1fppexRMA)
 - [Linkage - Rust Reference](https://doc.rust-lang.org/reference/linkage.html)
-- https://blog.mozilla.org/nnethercote/2019/10/10/visualizing-rust-compilation/
-- https://medium.com/@squanderingtime/manually-linking-rust-binaries-to-support-out-of-tree-llvm-passes-8776b1d037a4
-- https://man7.org/linux/man-pages/man1/nm.1.html
-- https://os.phil-opp.com/freestanding-rust-binary/
-- https://docs.oracle.com/cd/E19120-01/open.solaris/819-0690/chapter2-93321/index.html
+- [Visualizing Rust Compilation](https://blog.mozilla.org/nnethercote/2019/10/10/visualizing-rust-compilation/)
+- [Manually linking Rust binaries to support out-of-tree LLVM passes](https://medium.com/@squanderingtime/manually-linking-rust-binaries-to-support-out-of-tree-llvm-passes-8776b1d037a4)
+- [nm man page](https://man7.org/linux/man-pages/man1/nm.1.html)
+- [Freestanding Rust Binary - Writing an OS in Rust by Philipp Oppermann](https://os.phil-opp.com/freestanding-rust-binary/)
+- [Rules for Symbol Resolution](https://docs.oracle.com/cd/E19120-01/open.solaris/819-0690/chapter2-93321/index.html)
